--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,3 +1,8 @@
+@import "normalize";
+@import "./sprite/sprite-color";
+@import "./sprite/sprite-icon";
+@import "./sprite/sprite-png";
+
 html,
 body {
   padding: 0;
