добавил для активных ссылок - color

--- a/src/components/navigation/index.module.scss
+++ b/src/components/navigation/index.module.scss
@@ -17,6 +17,9 @@
     margin-right: 20px;
   }
 }
+.a_selected{
+  text-decoration: underline;
+}
 .center{
   display: flex;
   align-items: center;
