--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,7 +1,7 @@
 @import "normalize";
-@import "./sprite/sprite-color";
+@import "./sprite-color";
 @import "./sprite/sprite-icon";
-@import "./sprite/sprite-png";
+@import "./sprite/sprite-png.css";
 
 html,
 body {
@@ -37,7 +37,13 @@ img {
   max-width: 100%;
   display: block;
 }
-
+dl{
+  & > dt{}
+  & > dd{
+    padding: 0;
+    margin: 0;
+  }
+}
 @media screen and (max-width: 1100px){
   html{
     font-size: 11px;
