--- a/src/assets/scss/sprite-color.scss
+++ b/src/assets/scss/sprite-color.scss
@@ -1,5 +1,5 @@
 %svg-common {
-	background: url("../../_sprites/sprite-color.svg") no-repeat;
+	background: url("../_sprites/sprite-color.svg") no-repeat;
 }
 
 .svg-icon_crack {
